docs-archive/apache-airflow/3.2.1/_sources/_api/airflow/example_dags/example_asset_partition/index.rst.txt
airflow.example_dags.example_asset_partition
============================================

.. py:module:: airflow.example_dags.example_asset_partition


Attributes
----------

.. autoapisummary::

   airflow.example_dags.example_asset_partition.team_a_player_stats
   airflow.example_dags.example_asset_partition.combined_player_stats
   airflow.example_dags.example_asset_partition.regional_sales
   airflow.example_dags.example_asset_partition.region_raw_stats


Functions
---------

.. autoapisummary::

   airflow.example_dags.example_asset_partition.ingest_team_a_stats
   airflow.example_dags.example_asset_partition.team_b_player_stats
   airflow.example_dags.example_asset_partition.team_c_player_stats
   airflow.example_dags.example_asset_partition.combine_player_stats
   airflow.example_dags.example_asset_partition.compute_player_odds
   airflow.example_dags.example_asset_partition.check_partition_alignment
   airflow.example_dags.example_asset_partition.ingest_sales
   airflow.example_dags.example_asset_partition.aggregate_sales
   airflow.example_dags.example_asset_partition.ingest_region
   airflow.example_dags.example_asset_partition.regional_stats_breakdown


Module Contents
---------------

.. py:data:: team_a_player_stats

.. py:data:: combined_player_stats

.. py:function:: ingest_team_a_stats()

   Materialize Team A player statistics for the current hourly partition.


.. py:function:: team_b_player_stats()

   Produce hourly partitioned stats for Team B.


.. py:function:: team_c_player_stats()

   Produce hourly partitioned stats for Team C.


.. py:function:: combine_player_stats(dag_run=None)

   Merge the aligned hourly partitions into a combined dataset.


.. py:function:: compute_player_odds()

   Compute player odds from the combined hourly statistics.

   This asset is partition-aware and triggered by the combined stats asset.


.. py:function:: check_partition_alignment()

.. py:data:: regional_sales

.. py:function:: ingest_sales()

   Ingest regional sales data partitioned by region and time.


.. py:function:: aggregate_sales(dag_run=None)

   Aggregate sales data for the matched region-day partition.


.. py:data:: region_raw_stats

.. py:function:: ingest_region()

   Materialize player statistics for a single region partition.


.. py:function:: regional_stats_breakdown()

   Aggregate regional player statistics.

   This asset demonstrates AllowedKeyMapper, which validates that upstream partition
   keys belong to a fixed set of allowed values (``us``, ``eu``, ``apac``) rather than time-based partitions.


